--- a/zadania-domowe/Zadanie_d_2_css/css/style.css
+++ b/zadania-domowe/Zadanie_d_2_css/css/style.css
@@ -1,17 +1,48 @@
 body {
     margin: 0 auto;
+    font-family: lato;
+    font-weight: 500;
 }
 
-#mainframe {	
+figure {	
     width: 50%;
     position: relative;
     margin: 30px auto;	
 }
 
-div::before {content: ' '; border: 1px solid #fff;  position: absolute; width: 100%; height: 0; border-bottom: none; transition: all 1s linear;}
-div::after {content: ' '; border: 1px solid #fff;  position: absolute;  width: 100%; height: 0; border-top: none; top: 100%; transition: all 1s linear;}
-div:hover:before {content: ' '; border: 1px solid #000;  position: absolute; width: 100%; height: 50%; border-bottom: none;}
-div:hover:after {content: ' '; border: 1px solid #000;  position: absolute;  width: 100%; height: 50%; border-top: none; top: 50%;}
+figure::before {
+    content: ' '; 
+    border: 1px solid #fff;  
+    position: absolute; 
+    width: 100%; height: 0; 
+    border-bottom: none; 
+    transition: all 1s linear;
+}
+figure::after {
+    content: ' '; 
+    border: 1px solid #fff;  
+    position: absolute;  
+    width: 100%; height: 0; 
+    border-top: none; top: 100%; 
+    transition: all 1s linear;
+}
+figure:hover:before {
+    content: ' '; 
+    border: 1px solid #000;  
+    position: absolute; 
+    width: 100%; 
+    height: 50%; 
+    border-bottom: none;
+}
+figure:hover:after {
+    content: ' '; 
+    border: 1px solid #000;  
+    position: absolute;  
+    width: 100%; 
+    height: 50%; 
+    border-top: none; 
+    top: 50%;
+}
 
 img {
     width: 100%;
@@ -21,7 +52,7 @@ img {
 	display: block;
 }
 
-.tekst_glowny {
+h1 {
     text-transform: uppercase;
     position: absolute;
     color: rgba(255,255,255,0.0);
@@ -33,7 +64,7 @@ img {
 	transition: all 1s linear;
 }
 
-div:hover div {
+figure:hover h1 {
     color: rgba(255,255,255,1.0);
     background-color: rgba(0,0,0,1.0);
 }
