--- a/zadania-domowe/moje portfolio/css/style.css
+++ b/zadania-domowe/moje portfolio/css/style.css
@@ -296,6 +296,13 @@ text-align: center;
     border: 1px solid #213b50;
     background-color: #fff;
 }
+#contact .col-sm-12,
+    #contact .col-12 h2 {
+        text-align: center;
+    }
+
+
+
 
 footer {
     background-color: #142634;
