--- a/zadania-domowe/Zadanie_domowe_sass/app/scss/styles.scss
+++ b/zadania-domowe/Zadanie_domowe_sass/app/scss/styles.scss
@@ -1,1 +1,17 @@
-@import "general";
+@import 'general'; 
+
+@import 'nav';
+
+@import 'header';
+  
+@import 'about';   
+
+@import 'skills';
+
+@import 'portfolio';
+
+@import 'contact';
+
+@import 'footer';
+
+@import 'responsive';     
