--- a/zadania-domowe/Zadanie_domowe_sass/app/css/styles.css
+++ b/zadania-domowe/Zadanie_domowe_sass/app/css/styles.css
@@ -2,23 +2,220 @@
   box-sizing: border-box; }
 
 body {
-  font-family: 'Lato', sans-serif;
   margin: 0;
+  font-family: "Lato", sans-serif;
   color: #291f1a; }
-
-h2, span {
-  color: lightgreen; }
-
-h2 {
-  text-align: center; }
-
-section h2 {
-  font-size: 30px;
-  font-weight: 400;
-  margin-top: 60px;
-  margin-bottom: 35px;
-  margin-left: auto;
-  margin-right: auto; }
 
 section {
   padding: 0 60px 100px; }
+  section h2 {
+    font-size: 30px;
+    font-weight: 400;
+    margin-top: 60px;
+    margin-bottom: 35px;
+    margin-left: auto;
+    margin-right: auto; }
+
+p {
+  line-height: 25px; }
+
+.col-md-3,
+.col-md-4,
+.col-md-6 {
+  padding: 0; }
+
+.col-sm-12,
+.col-12 {
+  width: 100%; }
+
+#main-nav {
+  background-color: #fff; }
+  #main-nav .navbar-nav {
+    text-align: right; }
+  #main-nav a.navbar-brand {
+    font-size: 2em; }
+  #main-nav .nav-item a {
+    padding-right: 4.5rem;
+    color: #1ac056;
+    text-decoration: none; }
+    #main-nav .nav-item a:hover {
+      color: #777; }
+  #main-nav #main-nav.scroll {
+    background-color: rgba(26, 192, 86, 0.75); }
+    #main-nav #main-nav.scroll .nav-item a {
+      color: #777; }
+    #main-nav #main-nav.scroll:hover {
+      color: #000; }
+
+#main-header {
+  background: url(../img/header-background.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #fff; }
+  #main-header .main-header-text {
+    padding: 30vh;
+    text-align: center;
+    margin: 0 auto; }
+  #main-header h1 {
+    font-family: 'Lato', sans-serif;
+    font-size: 4em;
+    font-weight: 100;
+    font-size: 2em; }
+  #main-header h2 {
+    font-weight: 100;
+    font-size: 2em; }
+
+#about {
+  background-color: #f9fcfe;
+  overflow: hidden; }
+  #about figure {
+    margin: 0 auto;
+    text-align: center;
+    width: 318px;
+    height: 356px; }
+    #about figure img {
+      border: 14px solid #fff;
+      border-radius: 15px;
+      width: 100%; }
+
+#skills p {
+  text-align: center; }
+
+#skills figure
+img {
+  margin-bottom: 15px; }
+
+#skills #skills-icons {
+  text-align: center; }
+  #skills #skills-iconsfigure {
+    display: inline-block; }
+
+#portfolio .portfolio-items {
+  text-align: center;
+  font-size: 0; }
+  #portfolio .portfolio-items .portfolio-item {
+    height: 350px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 33%;
+    position: relative;
+    display: inline-block; }
+    #portfolio .portfolio-items .portfolio-item .item-mask {
+      background-color: rgba(42, 61, 79, 0.8);
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      transition: all 0.3s ease-in-out;
+      position: absolute;
+      font-size: initial; }
+      #portfolio .portfolio-items .portfolio-item .item-mask:hover {
+        opacity: 1; }
+      #portfolio .portfolio-items .portfolio-item .item-mask .item-content {
+        border: 1px solid #fff;
+        margin: 10px;
+        height: 330px;
+        position: relative; }
+        #portfolio .portfolio-items .portfolio-item .item-mask .item-content .item-content-inner {
+          color: #fff;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
+          right: 0;
+          left: 0;
+          padding: 5px; }
+          #portfolio .portfolio-items .portfolio-item .item-mask .item-content .item-content-inner a {
+            color: #fff; }
+            #portfolio .portfolio-items .portfolio-item .item-mask .item-content .item-content-inner a :hover {
+              color: #1ac056; }
+
+#portfolio .col-md-6,
+#portfolio .col-md-12 {
+  padding: 0; }
+
+#portfolio #portfolio-item-1 {
+  background-image: url(../img/portfolio1.jpg);
+  width: 100%; }
+
+#portfolio #portfolio-item-2 {
+  background-image: url(../img/portfolio2.jpg);
+  width: 100%; }
+
+#portfolio #portfolio-item-3 {
+  background-image: url(../img/portfolio4.jpg);
+  width: 100%; }
+
+#contact {
+  background-color: #213B50;
+  color: #fff;
+  overflow: hidden; }
+  #contact h2 {
+    text-align: left;
+    font-size: 38px; }
+  #contact a {
+    color: #1ac056; }
+  #contact .contact-form {
+    margin-top: 100px; }
+    #contact .contact-form input:not([type='submit']),
+    #contact .contact-form textarea {
+      border: 0 solid;
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      background-color: #2b4a64;
+      border: #2b4a64 0px;
+      color: #fff;
+      text-transform: uppercase;
+      padding: 10px;
+      border-radius: 5px; }
+      #contact .contact-form input:not([type='submit']):focus,
+      #contact .contact-form textarea:focus {
+        background-color: #2b4a64; }
+    #contact .contact-form input[type='submit'] {
+      background-color: #1ac056;
+      border: 0 solid #1ac056;
+      color: #fff;
+      transition: all .3s;
+      cursor: pointer;
+      border-radius: 2px;
+      float: left;
+      padding: 15px; }
+      #contact .contact-form input[type='submit']:hover {
+        background-color: #fff;
+        color: #1ac056; }
+  #contact address {
+    font-style: normal;
+    margin: 72px 0;
+    line-height: 25px; }
+  #contact .contact-social-icons a {
+    display: inline-block;
+    height: 38px;
+    width: 38px;
+    text-align: center;
+    line-height: 38px;
+    border: 1px solid #fff;
+    margin-right: 30px;
+    font-size: 22px; }
+    #contact .contact-social-icons a:hover {
+      color: #2b4a64;
+      border: 1px solid #2b4a64;
+      background-color: #fff; }
+
+footer {
+  background-color: #142634;
+  color: #fff;
+  padding: 0 80px; }
+  footer p {
+    margin: 0;
+    float: left; }
+
+@media all and (max-width: 992px) {
+  #contact .col-sm-12,
+  #contact .col-12 {
+    text-align: center; }
+    #contact .col-sm-12 h2,
+    #contact .col-12 h2 {
+      text-align: center; }
+  #contact .col-sm-12 input[type='submit'],
+  #contact .col-12 input[type='submit'] {
+    float: none; } }
