--- a/zadania-domowe/Zadanie_domowe_sass/app/scss/_general.scss
+++ b/zadania-domowe/Zadanie_domowe_sass/app/scss/_general.scss
@@ -1,30 +1,36 @@
+@import 'zmienne';
+@import 'mixins';
+
 * {
     box-sizing: border-box;
-} 
+}
 
-
-body  {
-    font-family: 'Lato', sans-serif;
+body {  
     margin: 0;
-    color:#291f1a;
+    font-family: $main-font;
+    color: $main-color;
 }
-h2 ,span{
-    color: lightgreen;
 
-}
-h2{
-   text-align: center;
-}
-section h2{
-    font-size: 30px;
-    font-weight: 400;
-    margin-top: 60px; 
-    margin-bottom: 35px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-section{
 
+section {
     padding: 0 60px 100px;
+
+    h2 {
+        @include section-h2;
+    }
+}
+
+p {
+    line-height: 25px;
+}
+
+.col-md-3,
+.col-md-4,
+.col-md-6 {
+    padding: 0;
+}
+
+.col-sm-12,
+.col-12 {
+    width: 100%;
 }
